# kasparro-backend-hariom-bhardwaj

./: .dockerignore  .env.example  .env.prod.example  Dockerfile  Makefile  README.md  alembic.ini  apprunner.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0002_add_raw_csv.py  0003_add_asset_mapping.py  91b0ee0279d4_initial_schema.py
app/: etl_entrypoint.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  data.py  etl.py  health.py  stats.py
app/core/: checkpoints.py  config.py  db.py  logging.py
app/ingestion/: api_source.py  base.py  csv_source.py  runner.py  third_source.py
app/models/: __init__.py  asset_mapping.py  checkpoints.py  normalized.py  raw.py  runs.py
app/schemas/: api.py  normalized.py  raw.py
app/services/: __init__.py  asset_service.py  data_service.py  etl_service.py
app/tests/: test_api.py  test_etl.py  test_failures.py  test_incremental.py
data/: crypto_market.csv
docs/: AWS_DEPLOYMENT.md
lambda/: etl_trigger.py
scripts/: deploy-apprunner.sh  setup-lambda-etl.sh
